# ukhs

./: .gitmodules  .travis.yml  Cargo.toml  README.md  build.rs  check.py
.github/: main.workflow
bbhash/: Cargo.toml
bbhash-sys/: Cargo.toml  build.rs  ffi.cpp
bbhash/src/: lib.rs
benches/: ukhs.rs
boomphf/: Cargo.toml
boomphf-sys/: Cargo.toml  build.rs  ffi.cpp  lib.rs
boomphf/src/: lib.rs
data/: res_7_100_4_0.txt  res_7_110_4_0.txt  res_7_130_4_0.txt  res_7_20_4_0.txt  res_7_30_4_0.txt  res_7_40_4_0.txt  res_7_50_4_0.txt  res_7_60_4_0.txt  res_7_70_4_0.txt  res_7_80_4_0.txt  res_7_90_4_0.txt  res_8_100_4_0.txt  res_8_110_4_0.txt  res_8_120_4_0.txt  res_8_130_4_0.txt  res_8_140_4_0.txt  res_8_200_4_0.txt  res_8_20_4_0.txt  res_8_30_4_0.txt  res_8_50_4_0.txt  res_8_60_4_0.txt  res_8_70_4_0.txt  res_8_80_4_0.txt  res_8_90_4_0.txt  res_9_100_4_0.txt  res_9_110_4_0.txt  res_9_120_4_0.txt  res_9_130_4_0.txt  res_9_140_4_0.txt  res_9_150_4_0.txt  res_9_160_4_0.txt  res_9_170_4_0.txt  res_9_180_4_0.txt  res_9_190_4_0.txt  res_9_200_4_0.txt  res_9_20_4_0.txt  res_9_30_4_0.txt  res_9_40_4_0.txt  res_9_50_4_0.txt  res_9_60_4_0.txt  (+3 more)
src/: errors.rs  lib.rs
tests/: ukhs.rs
