[package]
name = "ukhs"
version = "0.3.0"
authors = ["Luiz Irber <luiz.irber@gmail.com>"]
description = "Universal K-mer Hitting Sets"
repository = "https://github.com/luizirber/ukhs"
documentation = "https://docs.rs/ukhs"
keywords = ["bioinformatics"]
categories = ["science", "algorithms"]
license = "MIT/Apache-2.0"
readme = 'README.md'
edition = "2018"

[lib]
name = "ukhs"
bench = false

[workspace]

[dependencies]
boomphf = { path = "./boomphf" }
failure = "0.1.5"
nthash = "0.4.3"
lazy_static = "1.3.0"

[dev-dependencies]
criterion = "^0.2"
rand = "^0.5"

[[bench]]
name = "ukhs"
harness = false
