[package]
name = "ukhs"
version = "0.3.3"
authors = ["Luiz Irber <rust@luizirber.org>"]
description = "Universal K-mer Hitting Sets"
repository = "https://github.com/luizirber/ukhs"
documentation = "https://docs.rs/ukhs"
keywords = ["bioinformatics"]
categories = ["science", "algorithms"]
readme = 'README.md'
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
name = "ukhs"
bench = false

[workspace]

[dependencies]
bbhash = { version = "0.1.0", path = "./bbhash" }
failure = "0.1.5"
nthash = "0.4.3"
lazy_static = "1.3.0"

[dev-dependencies]
criterion = "^0.2"
rand = "^0.5"
proptest = "0.9.1"

[[bench]]
name = "ukhs"
harness = false
