[package]
name = "ukhs"
version = "0.4.0"
authors = ["Luiz Irber <rust@luizirber.org>"]
description = "Universal K-mer Hitting Sets"
repository = "https://github.com/luizirber/ukhs"
documentation = "https://docs.rs/ukhs"
keywords = ["bioinformatics"]
categories = ["science", "algorithms"]
readme = 'README.md'
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
name = "ukhs"
bench = false

[workspace]

[dependencies]
bbhash = { version = "0.1.1", path = "./bbhash" }
nthash = "0.4.3"
once_cell = "1.3.1"
thiserror = "1.0"

[dev-dependencies]
criterion = "^0.2"
rand = "^0.5"
proptest = "0.9.1"

[[bench]]
name = "ukhs"
harness = false
