[package]
name = "bbhash-sys"
version = "0.1.0"
authors = ["Luiz Irber <rust@luizirber.org>"]
edition = "2018"
description = "unsafe bindings for BBHash"
repository = "https://github.com/luizirber/ukhs"
documentation = "https://docs.rs/bbhash-sys"
license = "MIT/Apache-2.0"
build = "build.rs"
links = "bbhash"
include = [
  "lib.rs", "build.rs", "Cargo.toml",
  "ffi.cpp",
  "BBHash/BooPHF.h"
]

[dependencies]

[build-dependencies]
cc = "1.0.3"

[lib]
name = "bbhash_sys"
path = "lib.rs"

[dev-dependencies]
tempfile = "3.0.7"
