[package]
name = "bbhash"
version = "0.1.1"
authors = ["Luiz Irber <rust@luizirber.org>"]
edition = "2018"
description = "Rust bindings for BBHash"
repository = "https://github.com/luizirber/ukhs"
documentation = "https://docs.rs/bbhash"
license = "MIT/Apache-2.0"

[dependencies]
bbhash-sys = { version = "0.1.0", path = "../bbhash-sys" }
tempfile = "3.0.7"
