[package]
name = "boomphf-sys"
version = "0.1.0"
authors = ["Luiz Irber <luiz.irber@gmail.com>"]
edition = "2018"
build = "build.rs"
links = "boomphf"
include = [
  "lib.rs", "build.rs", "Cargo.toml",
  "ffi.cpp",
  "BBHash/BooPHF.h"
]

[dependencies]

[build-dependencies]
cc = "1.0.3"

[lib]
name = "boomphf_sys"
path = "lib.rs"

[dev-dependencies]
tempfile = "3.0.7"
